--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -28,10 +28,8 @@ jobs:
 
       - name: 🆕 Add changes to collections
         run: |
-          if [ -z "$(git status --porcelain)" ]; then 
-            # Working directory clean, we're done
-          else 
-            # Uncommitted changes, commit and create branch
+          if ! [ -z "$(git status --porcelain)" ]; then 
+            # We have uncommitted changes, commit and create branch
             git checkout -b $(date +'%Y-%m-%d')-update-collections
             git add static/collections.json
             git commit -m "static: update collections.json"
