--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -28,10 +28,10 @@ jobs:
 
       - name: 🆕 Add changes to collections
         run: |
-          if ! [ -z "$(git status --porcelain)" ]; then 
-            # We have uncommitted changes, commit and create branch
-            git checkout -b $(date +'%Y-%m-%d')-update-collections
+          if ! [ -z "$(git status --porcelain)" ]; then
+            git config user.name "GitHub Actions Bot"
+            git config user.email "<>"
             git add static/collections.json
             git commit -m "static: update collections.json"
-            gh pr create --title "Update collections" --base main --body 'Created by Github Actions'
+            gh pr create --title "Update collections $(date +'%m-%d')" --base main --head $(date +'%Y-%m-%d')-update-collections --body 'Created by Github Actions'
           fi
