--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -31,6 +31,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           if ! [ -z "$(git status --porcelain)" ]; then
+            #gib access
             git config user.name "GitHub Actions Bot"
             git config user.email "<>"
             git add static/collections.json
