static: update collections.json

--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -1,6 +1,9 @@
 name: Create PR to update collections
 
 on:
+  schedule:
+    # run once a day, 6am
+    - cron:  '0 6 * * *'
   pull_request:
   push:
     branches:
