even more stuff

--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -40,5 +40,5 @@ jobs:
             git checkout -b $(date +'%Y-%m-%d')-update-collections
             git add static/collections.json
             git commit -m "static: update collections.json"
-            gh pr create --title "Update collections $(date +'%m-%d')" --base main --head $(date +'%Y-%m-%d')-update-collections --body 'Created by Github Actions'
+            gh pr create --title "Update collections $(date +'%m-%d')" --base main --body 'Created by Github Actions'
           fi
