--- a/.github/workflows/collections-update.yml
+++ b/.github/workflows/collections-update.yml
@@ -1,6 +1,9 @@
 name: Create PR to update collections
 
 on:
+  schedule:
+    # run once a day, 6am
+    - cron:  '0 6 * * *'
   pull_request:
   push:
     branches:
@@ -37,5 +40,6 @@ jobs:
             git checkout -b $(date +'%Y-%m-%d')-update-collections
             git add static/collections.json
             git commit -m "static: update collections.json"
-            gh pr create --title "Update collections $(date +'%m-%d')" --base main --head $(date +'%Y-%m-%d')-update-collections --body 'Created by Github Actions'
+            git push -u origin $(date +'%Y-%m-%d')-update-collections
+            gh pr create --title "Update collections $(date +'%m-%d')" --base main --body 'Created by Github Actions'
           fi
